# raydical

./: .gitignore  CMakeLists.txt  README.md
src/core/: CMakeLists.txt  ImageBuffer.cpp  ImageBuffer.hpp  ImageBufferWriter.cpp  ImageBufferWriter.hpp  Vec3.hpp
src/core/test/: CMakeLists.txt  ImageBufferTest.cpp  ImageBufferWriterTest.cpp  Vec3Test.cpp
src/main/: CMakeLists.txt  Main.cpp
